updates fix for 1649 and adds new version

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-list/case-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-list/case-list.component.html
@@ -17,7 +17,7 @@
   <tbody class="govuk-table__body">
     <ng-container *ngFor="let c of cases | paginate: { itemsPerPage: pageSize, currentPage: currentPageNo, totalItems: totalResultsCount }">
       <tr data-selector="table-row" class="govuk-table__row">
-        <th data-selector="table-header" class="govuk-table__header" scope="row" *ngIf="selectionEnabled">
+        <td data-selector="table-header" class="govuk-table__header" scope="row" *ngIf="selectionEnabled">
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="select-{{ c[tableConfig.idField] }}" name="select-{{ c[tableConfig.idField] }}"
                   type="checkbox" (change)="changeSelection(c)" [checked]="isSelected(c)" [disabled]="!canBeShared(c)" (keyup)="onKeyUp($event, c)" />
@@ -25,7 +25,7 @@
             <label class="govuk-label govuk-checkboxes__label" for="select-{{ c[tableConfig.idField] }}" [attr.aria-labelledby]="'select-' + c[tableConfig.idField]">
             </label>
           </div>
-        </th>
+        </td>
         <ng-container *ngFor="let col of tableConfig.columnConfigs; first as isFirst">
           <th data-selector="table-header" class="govuk-table__header" scope="row" *ngIf="isFirst && firstCellIsHeader">
             <ng-container *ngIf="!col.type || col.type === 'text'">{{c[col.key] | rpxTranslate}}</ng-container>
