--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/check-your-answers/check-your-answers.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/linked-cases/components/check-your-answers/check-your-answers.component.html
@@ -33,7 +33,7 @@
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header">Case name and number</th>
           <th scope="col" class="govuk-table__header">Reasons for case link</th>
-          <th scope="col" class="govuk-table__header"></th>
+          <td scope="col" class="govuk-table__header"></td>
           <th scope="col" class="govuk-table__header" *ngIf="isLinkCasesJourney"></th>
         </tr>
       </thead>
