EXUI-2756 : Text alignment in Event history Detail seen to differ with current implementation on AAT

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-history/case-history.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-history/case-history.component.html
@@ -55,9 +55,9 @@
                       </td>
                     </tr>
                     <tr *ngSwitchCase="false" class="compound-field">
-                      <td colspan="2">
+                      <th colspan="2">
                         <ccd-field-read [caseField]="field" [caseReference]="caseHistory.case_id"></ccd-field-read>
-                      </td>
+                      </th>
                     </tr>
                   </ng-container>
                 </div>
