--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
@@ -1,6 +1,6 @@
 <div>
   <button type="button" class="overlay-toggle"
-          (click)="$event.stopPropagation(); isOpen = !isOpen"
+          (click)="$event.stopPropagation(); setOpen()"
           cdkOverlayOrigin #trigger="cdkOverlayOrigin">
     <ng-content select="[trigger]"></ng-content>
   </button>
