--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/workbasket-filters/workbasket-filters.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/workbasket-filters/workbasket-filters.component.html
@@ -51,6 +51,8 @@
   </ng-container>
 
   <div class="form-group">
-    <button type="button" class="button" (click)="scrollToTop()" [title]="'Back to top' | rpxTranslate" [attr.aria-label]="'Back to top' | rpxTranslate">{{'Back to top' | rpxTranslate}}</button>
+    <button type="button" class="button" (click)="scrollToTop()"
+          [title]="'Back to top' | rpxTranslate" [attr.aria-label]="'Back to top' | rpxTranslate">{{'Back to top' | rpxTranslate}}
+    </button>
   </div>
 </form>
