updates tabindex and version

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
@@ -19,9 +19,9 @@
       </ng-container>
 
       <ng-container *ngFor="let item of menuItems">
-        <li class="overlay-menu__item" tabindex="0" (click)="item.actionFn(); closeOverlay();" (keyup)="$event.key === 'Enter' ? actionAndClose(item.actionFn()) : null">
+        <li class="overlay-menu__item" tabindex="1" (click)="item.actionFn(); closeOverlay();" (keyup)="$event.key === 'Enter' ? actionAndClose(item.actionFn()) : null">
           <img *ngIf="item.iconSrc" [src]="item.iconSrc" class="overlay-menu__itemIcon" alt="{{title}} icon'" />
-          <div class="overlay-menu__actionText">{{item.actionText}}</div>
+          <span class="overlay-menu__actionText">{{item.actionText}}</span>
         </li>
       </ng-container>
     </div>
