--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-review-specific-access-reject/case-review-specific-access-reject.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-review-specific-access-reject/case-review-specific-access-reject.component.html
@@ -18,5 +18,5 @@
       <a button class="govuk-button govuk-!-margin-right-3" href="tasks/list" >{{returnToMyTask | rpxTranslate}}</a>
     </p>
   </div>
-  <p class="cancel"><a href="cases/case-details/{{caseId}}" >{{retunToTask | rpxTranslate}}</a></p>
+  <p class="cancel"><a href="cases/case-details/{{jurisdiction}}/{{caseType}}/{{caseId}}" >{{retunToTask | rpxTranslate}}</a></p>
 </div>
