EXUI-1848 - reduce translation of untranslatable text  (#1847)
* initial commit for changes to reduce untranslatable data being sent to translation service

* update package version

* Test of translation substitution

* suppress vuln

* update version for re-release

* Don't translate the number of results

* Remove undesirable translations, including removing translations of the values of text fields

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div *ngIf="(hasResults() || hasDrafts())" class="pagination-top">
-      <output [attr.aria-label]="getTotalResults() + ' results have been found' | rpxTranslate"></output>
+      <output [attr.aria-label]="getTotalResults() + ' ' + ('results have been found' | rpxTranslate)"></output>
           <span class="text-16" id="search-result-summary__text">{{'Showing' | rpxTranslate}}
         <span class="govuk-!-font-weight-bold">{{ getFirstResult() }}</span>
         {{'to' | rpxTranslate}}
@@ -37,7 +37,7 @@
         [attr.aria-sort]="isSortAscending(col) === null ? null : (isSortAscending(col) ? 'ascending' : 'descending')" scope="col">
         <div>
           <div class="search-result-column-label" (click)="sort(col)" (keyup)="noop()">
-            {{col.label | rpxTranslate}}
+            {{ isTranslatable(col) ? (col.label | rpxTranslate) : col.label }}
           </div>
           <div *ngIf="comparator(col)" class="search-result-column-sort">
             <a (click)="sort(col)" class="sort-widget" [innerHTML]="sortWidget(col)" href="javascript:void(0)"></a>
