--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/label/label-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/label/label-field.html
@@ -1,6 +1,9 @@
 <dl [hidden]="caseField.hidden" class="case-field" ccdLabelSubstitutor [caseField]="caseField" [contextFields]="caseFields" [id]="caseField.id">
   <dt>
-    <ccd-markdown *ngIf="labelCanBeTranslated" [content]="caseField.label | rpxTranslate">
+    <ccd-markdown *ngIf="labelCanBeTranslated && !caseField.isTranslated" [content]="caseField.label | rpxTranslate">
+    </ccd-markdown>
+
+    <ccd-markdown *ngIf="labelCanBeTranslated && caseField.isTranslated" [content]="caseField.label">
     </ccd-markdown>
 
     <ccd-markdown *ngIf="!labelCanBeTranslated" [content]="caseField.value || caseField.label">
