--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.html
@@ -23,7 +23,7 @@
           <span>{{ (page.label === '...') ? page.label : (page.label | number:'') }}</span>
         </a>
         <a tabindex="0" *ngIf="p.getCurrent() === page.value">
-          <span class="show-for-sr" [attr.current]="page" [attr.aria-label]="screenReaderCurrentLabel + ' ' + page.label">{{ screenReaderCurrentLabel | rpxTranslate }} </span>
+          <span class="show-for-sr" [attr.current]="page" [attr.aria-label]="screenReaderCurrentLabel">{{ screenReaderCurrentLabel | rpxTranslate }} </span>
           <span>{{ (page.label === '...') ? page.label : (page.label | number:'') }}</span>
         </a>
       </li>
