--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/pagination/pagination.component.scss
@@ -48,6 +48,7 @@ $blue_pagination: #005da6;
     color:  #4c2c92;
     cursor: default;
     font-weight: 900;
+    text-decoration: none;
 }
 .ngx-pagination .disabled {
     display: none;
