--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/organisation/read-organisation-field-raw.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/organisation/read-organisation-field-raw.component.html
@@ -1,19 +1,19 @@
 <div class="complex-panel">
-  <table class="complex-field-table" [attr.aria-describedby]="'complex organisation field table' | rpxTranslate">
+  <table class="complex-field-table" [attr.aria-describedby]="'Organisation field table' | rpxTranslate">
     <tbody>
       <tr>
         <th style="display: none;"></th>
         <td>
           <table class="complex-field-table" *ngIf="(selectedOrg$ | async) as selectedOrg"
-                 [attr.aria-describedby]="'complex selected organisation field table' | rpxTranslate">
+                 [attr.aria-describedby]="'Selected organisation field table' | rpxTranslate">
             <tr class="complex-panel-compound-field">
               <th style="display: none;"></th>
-              <td class="label-width-small"><span class="text-16">{{'Name:' | rpxTranslate}}</span></td>
+              <td class="label-width-small"><span class="text-16">{{'Name:'}}</span></td>
               <td><span class="text-16">{{selectedOrg.name}}</span></td>
             </tr>
             <tr class="complex-panel-compound-field">
               <th style="display: none;"></th>
-              <td class="label-width-small"><span class="text-16">{{'Address:' | rpxTranslate}}</span></td>
+              <td class="label-width-small"><span class="text-16">{{'Address:'}}</span></td>
               <td>
                 <ccd-markdown [content]="selectedOrg.address"></ccd-markdown>
               </td>
