Resolve sonar issues

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/error/callback-errors.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/error/callback-errors.html
@@ -1,4 +1,4 @@
-<div *ngIf="hasErrors() || hasWarnings()" class="error-summary" role="group"
+<div *ngIf="hasErrors() || hasWarnings()" class="error-summary"
      [attr.aria-label]="'Cannot continue because the service reported one or more errors or warnings' | rpxTranslate"
      tabindex="-1">
   <ng-container *ngIf="hasErrors()">
