--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field-collection-table.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field-collection-table.html
@@ -35,7 +35,7 @@
         </ng-container>
         <td>
           <div style="float: right;">
-            <a href="javascript:void(0)"> <img src="{{ getImage(i) }}" alt="image" class="accordion-image"/></a>
+            <a href="javascript:void(0)"> <img src="{{ getImage(i) }}" alt="accordion-img" class="accordion-image"/></a>
           </div>
         </td>
       </tr>
