EXUI-2931 - srt pr (#1903)
* initial commit for changes to reduce untranslatable data being sent to translation service

* update package version

* Test of translation substitution

* suppress vuln

* update version for re-release

* Don't translate the number of results

* Remove undesirable translations, including removing translations of the values of text fields

* EXUI-1843 - Markdown use angular router (#1887)

* Update ver, add code to use angular router when clicking link in markdown

* Use (click) insteas of @HostListener

* Update version name

* test add the markdown html as an exclusion as dont want to add all the keyboard inputs

* cleanup console log

* cve

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>

* EXUI-1848 - reduce translation of untranslatable text  (#1847)

* initial commit for changes to reduce untranslatable data being sent to translation service

* update package version

* Test of translation substitution

* suppress vuln

* update version for re-release

* Don't translate the number of results

* Remove undesirable translations, including removing translations of the values of text fields

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>

* EXUI-2640 - Add exclusion list code for doc store url (#1867)

* Add exclusion list code for doc store url

* change ver to pre-release

* add additional test

* add additional ?

* fix

* remove console log

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>

* Update case-edit-page.component.spec.ts

* Fix/exui 2744 (#1857)

* Initial commit, need to fix tests

* remove commented code, fix broken tests

* remove console log

* update version num

* code rev comments, change ver

* add additional checks for values being there

* update to use _value instead of formatted_value

* update to use .some() instead of .find()

* Update function name

---------

Co-authored-by: RiteshHMCTS <7

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/error/callback-errors.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/error/callback-errors.html
@@ -1,4 +1,4 @@
-<div *ngIf="hasErrors() || hasWarnings()" class="error-summary" role="group"
+<div *ngIf="hasErrors() || hasWarnings()" class="error-summary"
      [attr.aria-label]="'Cannot continue because the service reported one or more errors or warnings' | rpxTranslate"
      tabindex="-1">
   <ng-container *ngIf="hasErrors()">
@@ -7,7 +7,7 @@
     </h3>
     <ul id="errors" class="error-summary-list">
       <li *ngFor="let errorMsg of error.callbackErrors">
-        {{errorMsg | rpxTranslate}}
+        {{errorMsg}}
       </li>
     </ul>
   </ng-container>
@@ -19,7 +19,7 @@
     </h3>
     <ul id="warnings" class="error-summary-list">
       <li *ngFor="let warningMsg of error.callbackWarnings">
-        {{warningMsg | rpxTranslate}}
+        {{warningMsg}}
       </li>
     </ul>
   </ng-container>
