--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-list/write-dynamic-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/dynamic-list/write-dynamic-list-field.html
@@ -13,6 +13,6 @@
   <select class="form-control ccd-dropdown bottom-30" [id]="id()"
     [formControl]="dynamicListFormControl">
     <option [ngValue]=null>{{'--Select a value--' | rpxTranslate}}</option>
-    <option [ngValue]="type.code" *ngFor="let type of caseField.list_items" role="option">{{type.label | rpxTranslate}}</option>
+    <option [ngValue]="type.code" *ngFor="let type of caseField.list_items">{{type.label | rpxTranslate}}</option>
   </select>
 </div>
