fixes pipeline reliability issues

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
@@ -18,12 +18,12 @@
         <div class="overlay-menu__title">{{title}}</div>
       </ng-container>
 
-      <ng-container *ngFor="let item of menuItems; index as i">
+      <ul *ngFor="let item of menuItems; index as i">
         <li class="overlay-menu__item" tabindex="0" [id]="'overlay-menu__item' + i" (click)="item.actionFn(); closeOverlay();" (keyup)="$event.key === 'Enter' ? actionAndClose(item.actionFn()) : null">
           <img *ngIf="item.iconSrc" [src]="item.iconSrc" class="overlay-menu__itemIcon" alt="{{title}} icon'" />
           <span class="overlay-menu__actionText">{{item.actionText}}</span>
         </li>
-      </ng-container>
+      </ul>
     </div>
   </ng-template>
 </div>
