callback message implemented

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
@@ -24,7 +24,7 @@
     <ng-template #queryIsInReview>
       <div>
         <p class="govuk-!-font-weight-bold">{{ 'Your query is under review' | rpxTranslate }}</p>
-        <p>{{ 'Our team will read your query and will respond. Do not submit the same query more than once.' | rpxTranslate }}</p>
+        <p>{{ 'Our team will read your query and respond. Do not submit the same query more than once.' | rpxTranslate }}</p>
       </div>
     </ng-template>
   </ng-container>
