--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="govuk-body">
           <h3 class="govuk-heading-s">{{'What happens next' | rpxTranslate}}</h3>
-          <p>{{'Our team will read your query and will respond' | rpxTranslate}}</p>
+          <p>{{ callbackConfirmationBodyText | rpxTranslate}}</p>
           <p>{{'When the response is available it will be added to the \'Queries\' section.' | rpxTranslate}}</p>
           <p>
             {{'You can' | rpxTranslate}}
