--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
@@ -7,7 +7,9 @@
     </h2>
     <button class="button write-collection-add-item__top" type="button" (click)="addItem(true)" [disabled]="isNotAuthorisedToCreate() || isSearchFilter()">{{'Add new' | rpxTranslate}}</button>
     <h2 class="heading-h2 error-spacing" *ngIf="caseField.hint_text || formArray.errors">
-      <span *ngIf="caseField.hint_text" class="form-hint">{{caseField.hint_text | rpxTranslate }}</span>
+      <span *ngIf="caseField.hint_text" class="form-hint">
+      <markdown>{{caseField.hint_text | rpxTranslate }}</markdown>
+      </span>
       <span *ngIf="formArray.errors" class="error-message">
         {{(formArray.errors | ccdFirstError:caseField.label)}}
       </span>
