--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -66,7 +66,7 @@
             <td class="govuk-table__cell">{{ child.createdOn | date: 'dd MMM yyyy' }}</td>
           </tr>
 
-            <tr *ngIf="isCaseworker()" class="govuk-table__row">
+            <tr *ngIf="isInternalUser()" class="govuk-table__row">
               <th scope="row" class="govuk-table__header">{{ 'Caseworker name' | rpxTranslate }}</th>
               <td class="govuk-table__cell">{{ child.name }}</td>
             </tr>
