updates html structure and adds new version

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
@@ -18,11 +18,13 @@
         <div class="overlay-menu__title">{{title}}</div>
       </ng-container>
 
-      <ul *ngFor="let item of menuItems;">
-        <li class="overlay-menu__item" tabindex="0" (click)="item.actionFn(); closeOverlay();" (keydown.enter)="item.actionFn(); closeOverlay();">
-          <img *ngIf="item.iconSrc" [src]="item.iconSrc" class="overlay-menu__itemIcon" alt="{{title}} icon'" />
-          <span class="overlay-menu__actionText">{{item.actionText}}</span>
-        </li>
+      <ul>
+        <ng-container *ngFor="let item of menuItems;">
+          <li class="overlay-menu__item" tabindex="0" (click)="item.actionFn(); closeOverlay();" (keydown.enter)="item.actionFn(); closeOverlay();">
+            <img *ngIf="item.iconSrc" [src]="item.iconSrc" class="overlay-menu__itemIcon" alt="{{title}} icon'" />
+            <span class="overlay-menu__actionText">{{item.actionText}}</span>
+          </li>
+        </ng-container>
       </ul>
     </div>
   </ng-template>
