--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/event-start/components/task-assigned/task-assigned.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/event-start/components/task-assigned/task-assigned.component.html
@@ -17,7 +17,7 @@
 
     <p>{{'This task is assigned to' | rpxTranslate}} {{assignedUserName}}. {{'You must assign it to yourself to continue.' | rpxTranslate}}</p>
 
-    <a href="javascript:void(0)" [routerLink]="['/', 'cases', 'case-details', jurisdiction, caseType, caseId, 'tasks']"></a>
+    <a href="javascript:void(0)" [routerLink]="['/', 'cases', 'case-details', jurisdiction, caseType, caseId, 'tasks']">
       {{'Return to tasks tab' | rpxTranslate}}
     </a>
   </div>
