--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/case-file-view-folder/case-file-view-folder.component.html
@@ -28,7 +28,7 @@
     <cdk-tree [dataSource]="nestedDataSource" [treeControl]="nestedTreeControl">
       <!-- document -->
       <cdk-nested-tree-node class="document-tree-container__node document-tree-container__node--document" *cdkTreeNodeDef="let node">
-        <button class="node" (click)="selectedNodeItem = node; clickedDocument.emit(node)"
+        <button class="node case-file__node" (click)="selectedNodeItem = node; clickedDocument.emit(node)"
                 [class.node--selected]="selectedNodeItem?.name === node.name">
           <div class="node__icon" disabled>
             <img src="/assets/img/case-file-view/case-file-view-document.svg" class="node__iconImg" alt="Document icon">
@@ -38,17 +38,17 @@
             <br>
             <span class="node__document-upload-timestamp">{{node.upload_timestamp | ccdDate : 'local' :'dd MMM YYYY HH:mm'}}</span>
           </span>
-          <div class="node__document-options">
-            <ccd-case-file-view-folder-document-actions
-              (changeFolderAction)="triggerDocumentAction('changeFolder', node)"
-              (openInANewTabAction)="triggerDocumentAction('openInANewTab', node)"
-              (downloadAction)="triggerDocumentAction('download', node)"
-              (printAction)="triggerDocumentAction('print', node)"
-              [allowMoving]="allowMoving"
-            >
-            </ccd-case-file-view-folder-document-actions>
-          </div>
         </button>
+        <div class="node__document-options case-file__action">
+          <ccd-case-file-view-folder-document-actions
+            (changeFolderAction)="triggerDocumentAction('changeFolder', node)"
+            (openInANewTabAction)="triggerDocumentAction('openInANewTab', node)"
+            (downloadAction)="triggerDocumentAction('download', node)"
+            (printAction)="triggerDocumentAction('print', node)"
+            [allowMoving]="allowMoving"
+          >
+          </ccd-case-file-view-folder-document-actions>
+        </div>
       </cdk-nested-tree-node>
       <!-- folder-->
       <cdk-nested-tree-node class="document-tree-container__node document-tree-container__folder" *cdkTreeNodeDef="let node; when: nestedChildren">
