--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
@@ -20,7 +20,7 @@
       <div class="govuk-radios" data-module="govuk-radios">
         <ng-container *ngFor="let qualifyingQuestion of qualifyingQuestions$ | async; let isLast = last">
           <ng-container *ngIf="isLast">
-            <div class="govuk-radios__divider">{{ 'or' | rpxTranslate }}</div>
+            <div class="govuk-radios__divider">{{ 'If your issue is not covered by the options above, raise a query:' | rpxTranslate }}</div>
           </ng-container>
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="{{qualifyingQuestion.name}}" name="qualifyingQuestionOption"
