--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
@@ -7,7 +7,7 @@
         </h1>
       </legend>
       <h2 class="govuk-heading-m govuk-!-margin-top-10">
-        {{ 'Select the type of query you are raising:' | rpxTranslate }}
+        {{ 'What do you need help to do?' | rpxTranslate }}
       </h2>
 
       <ng-container *ngIf="displayError">
