--- a/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/components/form/date-input/date-input.html
@@ -53,7 +53,9 @@
            class="form-control"
            [id]="hourId()"
            [name]="hourId()"
-           type="number"
+           type="text"
+           pattern="[0-9]*"
+           inputmode="numeric"
            [value]="displayHour"
            (input)="hourChange(hourInput.value)"
            (keyup)="hourChange(hourInput.value)"
@@ -67,7 +69,9 @@
            class="form-control"
            [id]="minuteId()"
            [name]="minuteId()"
-           type="number"
+           type="text"
+           pattern="[0-9]*"
+           inputmode="numeric"
            [value]="displayMinute"
            (input)="minuteChange(minuteInput.value)"
            (keyup)="minuteChange(minuteInput.value)"
@@ -81,7 +85,9 @@
            class="form-control"
            [id]="secondId()"
            [name]="secondId()"
-           type="number"
+           type="text"
+           pattern="[0-9]*"
+           inputmode="numeric"
            [value]="displaySecond"
            (input)="secondChange(secondInput.value)"
            (keyup)="secondChange(secondInput.value)"
