WIP:Feature/ongoing accessibility (#1923)
* amends date id functions and updates version

* updates to add a random character string to ID

* updates the label gen function again

* adds another typescript fix

* tries this same thing via a nes method

* adds a new unit test

* adds more unit tests

* updates this slightly

* fixes the failing unit tests with another update for the formLabel

* updates the version number

* updates function for sonar

* tries to pull through parent information to distinguish between fields

* updates version

* tries to use the form group controls

* uses the abstract function

* updates the version number

* pulls id from hierachy

* adds suggested updates

* WIP - fixing issues with id generation

* Fix bug, rename function

* updates html of write collection field component

* updates version for testing

* updates method

* updates html structure and adds new version

* adds a change to the casefileview html

* adds coverage fo sonar

* fixes test issue where menu was set to open

* updates yarn audit file

* updates test with master

* updates version number

* adds a debugging log

* updates yarn lock file

* updates version number and debugging

* updates debugging

* adds an exclude to parent value in model

* removes console log and updates version

* EXUI-2497: fixing 6 WAVE issue

* package updated

* bump in version

---------

Co-authored-by: Andy Wilkins <49269487+andywilkinshmcts@users.noreply.github.com>
Co-authored-by: Munish Sharma <munish.sharma@hmcts.net>
Co-authored-by: RiteshHMCTS <ritesh.dsouza@hmcts.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/components/shared/case-file-view-overlay-menu/case-file-view-overlay-menu.component.html
@@ -1,6 +1,6 @@
 <div>
   <button type="button" class="overlay-toggle"
-          (click)="$event.stopPropagation(); isOpen = !isOpen"
+          (click)="$event.stopPropagation(); setOpen()"
           cdkOverlayOrigin #trigger="cdkOverlayOrigin">
     <ng-content select="[trigger]"></ng-content>
   </button>
@@ -18,12 +18,14 @@
         <div class="overlay-menu__title">{{title}}</div>
       </ng-container>
 
-      <ng-container *ngFor="let item of menuItems; index as i">
-        <div class="overlay-menu__item" tabindex="0" [id]="'overlay-menu__item' + i" (click)="item.actionFn(); closeOverlay();" (keyup)="$event.key === 'Enter' ? actionAndClose(item.actionFn()) : null">
-          <img *ngIf="item.iconSrc" [src]="item.iconSrc" class="overlay-menu__itemIcon" alt="{{title}} icon'" />
-          <span class="overlay-menu__actionText">{{item.actionText}}</span>
-        </div>
-      </ng-container>
+      <ul>
+        <ng-container *ngFor="let item of menuItems;">
+          <li class="overlay-menu__item" tabindex="0" (click)="item.actionFn(); closeOverlay();" (keydown.enter)="item.actionFn(); closeOverlay();">
+            <img *ngIf="item.iconSrc" [src]="item.iconSrc" class="overlay-menu__itemIcon" alt="{{title}} icon'" />
+            <span class="overlay-menu__actionText">{{item.actionText}}</span>
+          </li>
+        </ng-container>
+      </ul>
     </div>
   </ng-template>
 </div>
