--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/date/write-date-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/date/write-date-field.html
@@ -8,7 +8,7 @@
     <span class="error-message" *ngIf="dateControl && dateControl.errors && (dateControl.dirty || dateControl.touched)">
       {{(dateControl.errors | ccdFirstError:caseField.label)}}
     </span>
-    <cut-date-input [id]="id()"
+    <cut-date-input [id]="getId()"
                     [isDateTime]="isDateTime()"
                     [mandatory]="caseField | ccdIsMandatory"
                     [isInvalid]="dateControl.errors && (dateControl.dirty || dateControl.touched)"
