--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
@@ -9,6 +9,7 @@
     <h2 class="heading-h2 error-spacing" *ngIf="caseField.hint_text || formArray.errors">
       <span *ngIf="caseField.hint_text" class="form-hint">
       <markdown>{{caseField.hint_text | rpxTranslate }}</markdown>
+      <ccd-markdown [content]="caseField.hint_text"></ccd-markdown>
       </span>
       <span *ngIf="formArray.errors" class="error-message">
         {{(formArray.errors | ccdFirstError:caseField.label)}}
