fix no task error found

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
@@ -1,4 +1,4 @@
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" *ngIf="readyToSubmit">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <!-- Error message summary -->
     <div *ngIf="errorMessages.length > 0" class="govuk-error-summary"
